[package]
authors = ["clitic <clitic21@gmail.com>"]
categories = ["parser-implementations", "parsing"]
description = "MP4 parser ported from shaka-player with decryption and subtitle extraction support."
documentation = "https://docs.rs/vsd-mp4"
edition = "2024"
keywords = ["mp4"]
license = "MIT OR Apache-2.0"
name = "vsd-mp4"
repository = "https://github.com/clitic/vsd/tree/main/vsd-mp4"
version = "0.2.0"
readme = "README.md"

[dependencies]
aes = { version = "0.9", optional = true }
base64 = { version = "0.22", optional = true }
cbc = { version = "0.2", optional = true }
cipher = { version = "0.5", optional = true }
ctr = { version = "0.10", optional = true }
hex = { version = "0.4", optional = true }
iori-ssa = { version = "0.2.1", optional = true }
prost = { version = "0.14", optional = true }
quick-xml = { version = "0.40", features = ["serialize"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[build-dependencies]
prost-build = { version = "0.14", optional = true }

[features]
default = ["full"]
full = ["decrypt-cenc", "decrypt-hls", "pssh", "sidx", "sub-ttml", "sub-vtt"]
decrypt-cenc = ["dep:aes", "dep:cbc", "dep:cipher", "dep:ctr", "dep:hex"]
decrypt-hls = ["dep:aes", "dep:cbc", "dep:iori-ssa"]
pssh = [
    "dep:base64",
    "dep:hex",
    "dep:prost",
    "dep:prost-build",
    "dep:serde",
    "dep:quick-xml",
]
sidx = []
sub-ttml = ["dep:serde", "dep:quick-xml"]
sub-vtt = []

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
