[package]
authors = ["clitic <clitic21@gmail.com>"]
categories = ["command-line-utilities"]
description = "Download streams from DASH and HLS playlists."
documentation = "https://docs.rs/vsd"
edition = "2024"
exclude = ["images"]
keywords = ["m3u8", "mpd"]
license = "MIT OR Apache-2.0"
name = "vsd"
repository = "https://github.com/clitic/vsd/tree/main/vsd"
version = "0.5.0"
readme = "README.md"

[dependencies]
base64 = "0.22"
blake3 = "1.8"
chromiumoxide = { version = "0.9.1", optional = true }
chrono = "0.4"
clap = { version = "4", features = ["derive", "wrap_help"] }
colored = "3"
cookie = "0.18"
dash-mpd = { version = "0.20", default-features = false }
glob = "0.3"
hex = "0.4"
log = "0.4"
m3u8-rs = "6.0.0"
playready = { version = "0.3.0", optional = true }
requestty = "0.6.3"
reqwest = { version = "0.13", default-features = false, features = [ # https://docs.rs/crate/reqwest/latest/features
    "charset",      # default
    "http2",        # default
    "system-proxy", # default
    "cookies",
    "query",
    "socks",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
    "fs",
    "io-util",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
tokio-stream = { version = "0.1", optional = true }
url = "2"
vsd-mp4 = { version = "0.2.0", path = "../vsd-mp4", features = ["full"] }
widevine = { version = "0.1.0", optional = true }

[features]
default = ["capture", "license", "rustls-tls"]
capture = ["dep:chromiumoxide", "dep:tokio-stream"]
license = ["dep:playready", "dep:widevine"]
rustls-tls = ["reqwest/rustls"]
native-tls = ["reqwest/native-tls"]
native-tls-vendored = ["reqwest/native-tls-vendored"]
# default = ["native-tls"]
